--- a/css/style.css
+++ b/css/style.css
@@ -185,14 +185,14 @@ body {
 /* About Section */
 
 .about,
-.menu,
+.education,
 .products,
 .contact {
     padding: 8rem 7% 1.4rem;
 }
 
 .about h2,
-.menu h2,
+.education h2,
 .products h2,
 .contact h2 {
     text-align: center;
@@ -201,7 +201,7 @@ body {
 }
 
 .about h2 span,
-.menu h2 span,
+.education h2 span,
 .products h2 span,
 .contact h2 span {
     color: var(--primary);
@@ -238,15 +238,15 @@ body {
 }
 
 
-/* Menu Section */
+/* Education Section */
 
-.menu h2,
+.education h2,
 .products h2,
 .contact h2 {
     margin-bottom: 1rem;
 }
 
-.menu p,
+.education p,
 .products p,
 .contact p {
     text-align: center;
@@ -256,24 +256,24 @@ body {
     line-height: 1.6;
 }
 
-.menu .row {
+.education .row {
     display: flex;
     flex-wrap: wrap;
     margin-top: 5rem;
     justify-content: center;
 }
 
-.menu .row .menu-card {
+.education .row .education-card {
     text-align: center;
     padding-bottom: 4rem;
 }
 
-.menu .row .menu-card img {
+.education .row .education-card img {
     border-radius: 50%;
     width: 80%;
 }
 
-.menu .row .menu-card .menu-card-title {
+.education .row .education-card .menu-card-title {
     margin: 1rem auto 0.5rem;
 }
 
@@ -583,7 +583,7 @@ footer .credit a {
     .about .row .content p {
         font-size: 1.6rem;
     }
-    .menu p {
+    .education p {
         font-size: 1.2rem;
     }
     .contact .row {
