--- a/css/style.css
+++ b/css/style.css
@@ -465,6 +465,7 @@ footer .credit a {
     padding: 1.2rem;
     border: 1px solid #666;
     width: 80%;
+    height: 45%;
     animation: animateModal 0.5s;
 }
 
@@ -507,11 +508,12 @@ footer .credit a {
 .modal-content a {
     display: flex;
     gap: 1rem;
-    width: 12rem;
+    width: 14rem;
+    border-radius: 10px;
     background-color: var(--primary);
     color: #fff;
     margin-top: 1rem;
-    padding: 1rem 1.6rem;
+    padding: 1rem 1.9rem;
 }
 
 
