--- a/css/style.css
+++ b/css/style.css
@@ -1,186 +1,186 @@
 :root {
-    --primary: #009688;
-    --bg: #373c38;
+  --primary: #009688;
+  --bg: #373c38;
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    outline: none;
-    border: none;
-    text-decoration: none;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  outline: none;
+  border: none;
+  text-decoration: none;
 }
 
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 body {
-    font-family: "Poppins", sans-serif;
-    background-color: var(--bg);
-    color: #fff;
+  font-family: "Poppins", sans-serif;
+  background-color: var(--bg);
+  color: #fff;
 }
-
 
 /* Navbar */
 
 .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1.4rem 7%;
-    background-color: rgba(255, 255, 255, 0.6);
-    border-bottom: 1px solid #009688;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 9999;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.4rem 7%;
+  background-color: rgba(255, 255, 255, 0.6);
+  border-bottom: 1px solid #009688;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 9999;
 }
 
 .navbar .navbar-logo {
-    font-size: 2rem;
-    font-weight: 700;
-    color: #000;
-    font-style: italic;
+  font-size: 2rem;
+  font-weight: 700;
+  color: #000;
+  font-style: italic;
 }
 
 .navbar .navbar-logo span {
-    color: var(--primary);
+  color: var(--primary);
 }
 
 .navbar .navbar-nav a {
-    color: #000;
-    display: inline-block;
-    font-size: 1.3rem;
-    margin: 0 1rem;
+  color: #000;
+  display: inline-block;
+  font-size: 1.3rem;
+  margin: 0 1rem;
 }
 
 .navbar .navbar-nav a:hover {
-    color: var(--primary);
+  color: var(--primary);
 }
 
 .navbar .navbar-nav a::after {
-    content: "";
-    display: block;
-    padding-bottom: 0.5rem;
-    border-bottom: 0.1rem solid var(--primary);
-    transform: scaleX(0);
-    transition: 0.2s linear;
+  content: "";
+  display: block;
+  padding-bottom: 0.5rem;
+  border-bottom: 0.1rem solid var(--primary);
+  transform: scaleX(0);
+  transition: 0.2s linear;
 }
 
 .navbar .navbar-nav a:hover::after {
-    transform: scaleX(0.5);
+  transform: scaleX(0.5);
 }
 
 .navbar .navbar-extra a {
-    color: rgba(0, 0, 0, 0.3);
-    margin: 0 0.5rem;
+  color: rgba(0, 0, 0, 0.3);
+  margin: 0 0.5rem;
 }
 
 .navbar .navbar-extra a:hover {
-    color: var(--primary);
+  color: var(--primary);
 }
 
 #hamburger-menu {
-    display: none;
+  display: none;
 }
-
 
 /* Navbar search form */
 
 .navbar .search-form {
-    position: absolute;
-    top: 100%;
-    right: 7%;
-    background-color: #fff;
-    width: 50rem;
-    height: 5rem;
-    display: flex;
-    align-items: center;
-    transform: scaleY(0);
-    transform-origin: top;
-    transition: 0.3s;
+  position: absolute;
+  top: 100%;
+  right: 7%;
+  background-color: #fff;
+  width: 50rem;
+  height: 5rem;
+  display: flex;
+  align-items: center;
+  transform: scaleY(0);
+  transform-origin: top;
+  transition: 0.3s;
 }
 
 .navbar .search-form.active {
-    transform: scaleY(1);
+  transform: scaleY(1);
 }
 
 .navbar .search-form input {
-    height: 100%;
-    width: 100%;
-    font-size: 1.6rem;
-    color: var(--bg);
-    padding: 1rem;
+  height: 100%;
+  width: 100%;
+  font-size: 1.6rem;
+  color: var(--bg);
+  padding: 1rem;
 }
 
 .navbar .search-form label {
-    cursor: pointer;
-    font-size: 2rem;
-    margin-right: 1.5rem;
-    color: var(--bg);
+  cursor: pointer;
+  font-size: 2rem;
+  margin-right: 1.5rem;
+  color: var(--bg);
 }
-
 
 /* Hero Section */
 
 .hero {
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    background-image: url("../img/bg.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    position: relative;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  background-image: url("../img/bg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  position: relative;
 }
 
 .hero::after {
-    content: "";
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: 30%;
-    bottom: 0;
-    background: linear-gradient( 0deg, rgba(1, 1, 3, 1) 8%, rgba(255, 255, 255, 0) 50%);
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 30%;
+  bottom: 0;
+  background: linear-gradient(
+    0deg,
+    rgba(1, 1, 3, 1) 8%,
+    rgba(255, 255, 255, 0) 50%
+  );
 }
 
 .hero .content {
-    padding: 1.4rem 7%;
-    max-width: 60rem;
+  padding: 1.4rem 7%;
+  max-width: 60rem;
 }
 
 .hero .content h1 {
-    font-size: 5em;
-    color: #fff;
-    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
-    line-height: 1.2;
+  font-size: 5em;
+  color: #fff;
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
+  line-height: 1.2;
 }
 
 .hero .content h1 span {
-    color: var(--primary);
+  color: var(--primary);
 }
 
 .hero .content p {
-    font-size: 1.6rem;
-    margin-top: 1rem;
-    line-height: 1.4;
-    font-weight: 100;
+  font-size: 1.6rem;
+  margin-top: 1rem;
+  line-height: 1.4;
+  font-weight: 100;
 }
 
 .hero .content .cta {
-    margin-top: 1rem;
-    display: inline-block;
-    padding: 1rem 3rem;
-    font-size: 1.4rem;
-    color: #fff;
-    background-color: var(--primary);
-    border-radius: 0.5rem;
-    box-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
+  margin-top: 1rem;
+  display: inline-block;
+  padding: 1rem 3rem;
+  font-size: 1.4rem;
+  color: #fff;
+  background-color: var(--primary);
+  border-radius: 0.5rem;
+  box-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
 }
-
 
 /* About Section */
 
@@ -188,438 +188,500 @@ body {
 .education,
 .experience,
 .skills,
+.products,
 .contact {
-    padding: 8rem 7% 1.4rem;
+  padding: 8rem 7% 1.4rem;
 }
 
 .about h2,
 .education h2,
 .experience h2,
 .skills h2,
+.products h2,
 .contact h2 {
-    text-align: center;
-    font-size: 2.6rem;
-    margin-bottom: 3rem;
+  text-align: center;
+  font-size: 2.6rem;
+  margin-bottom: 3rem;
 }
 
 .about h2 span,
 .education h2 span,
 .experience h2 span,
 .skills h2 span,
+.products h2 span,
 .contact h2 span {
-    color: var(--primary);
+  color: var(--primary);
 }
 
 .about .row {
-    display: flex;
+  display: flex;
 }
 
 .about .row .about-img {
-    flex: 1 1 45rem;
+  flex: 1 1 45rem;
 }
 
 .about .row .about-img img {
-    width: 80%;
+  width: 80%;
 }
 
 .about .row .content {
-    flex: 1 1 35rem;
-    padding: 0 1rem;
-    margin-top: 10%;
+  flex: 1 1 35rem;
+  padding: 0 1rem;
+  margin-top: 10%;
 }
 
 .about .row .content h3 {
-    font-size: 1.8rem;
-    margin-bottom: 1rem;
+  font-size: 1.8rem;
+  margin-bottom: 1rem;
 }
 
 .about .row .content p {
-    margin-bottom: 0.9rem;
-    font-size: 1.3rem;
-    font-weight: 100;
-    line-height: 1.6;
+  margin-bottom: 0.9rem;
+  font-size: 1.3rem;
+  font-weight: 100;
+  line-height: 1.6;
 }
-
 
 /* Education Section */
 
 .education h2,
 .experience h2,
 .contact h2 {
-    margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 
 .education p,
 .experience p,
 .skills p,
+.products p,
 .contact p {
-    text-align: center;
-    max-width: 30rem;
-    margin: auto;
-    font-weight: 100;
-    line-height: 1.6;
+  text-align: center;
+  max-width: 30rem;
+  margin: auto;
+  font-weight: 100;
+  line-height: 1.6;
 }
 
 .education .row {
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: 5rem;
-    justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 5rem;
+  justify-content: center;
 }
 
 .education .row .education-card {
-    text-align: center;
-    padding-bottom: 4rem;
+  text-align: center;
+  padding-bottom: 4rem;
 }
 
 .education .row .education-card img {
-    border-radius: 50%;
-    width: 80%;
+  border-radius: 50%;
+  width: 80%;
 }
 
 .education .row .education-card .menu-card-title {
-    margin: 1rem auto 0.5rem;
+  margin: 1rem auto 0.5rem;
 }
-
 
 /* experience Section */
 
 .experience .row {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
-    gap: 1.5rem;
-    margin-top: 4rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  gap: 1.5rem;
+  margin-top: 4rem;
 }
 
 .experience .product-card {
-    text-align: center;
-    border: 1px solid #666;
-    padding: 2rem;
+  text-align: center;
+  border: 1px solid #666;
+  padding: 2rem;
 }
 
 .experience .product-icons {
-    display: flex;
-    justify-content: center;
-    gap: 0.5rem;
+  display: flex;
+  justify-content: center;
+  gap: 0.5rem;
 }
 
 .experience .product-icons a {
-    width: 4rem;
-    height: 4rem;
-    color: #fff;
-    margin: 0.3rem;
-    border: 1px solid #666;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 4rem;
+  height: 4rem;
+  color: #fff;
+  margin: 0.3rem;
+  border: 1px solid #666;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .experience .product-icons a:hover {
-    background-color: var(--primary);
-    border: 1px solid var(--primary);
+  background-color: var(--primary);
+  border: 1px solid var(--primary);
 }
 
 .experience .product-image {
-    padding: 1rem 0;
+  padding: 1rem 0;
 }
 
 .experience .product-image img {
-    height: 25rem;
+  height: 25rem;
 }
 
 .experience .product-content h3 {
-    font-size: 2rem;
+  font-size: 2rem;
 }
 
 .experience .product-stars {
-    font-size: 1.7rem;
-    padding: 0.8rem;
-    color: var(--primary);
+  font-size: 1.7rem;
+  padding: 0.8rem;
+  color: var(--primary);
 }
 
 .experience .product-stars .star-full {
-    fill: var(--primary);
+  fill: var(--primary);
 }
 
 .experience .product-price {
-    font-size: 1.3rem;
-    font-weight: bold;
+  font-size: 1.3rem;
+  font-weight: bold;
 }
-
 
 /* Skills Section */
 
 .skills .row {
-    display: grid;
-    margin-top: 20px;
+  display: grid;
+  margin-top: 20px;
 }
 
 .skills .column {
-    margin: auto;
+  margin: auto;
+}
+/* Products Section */
+
+.products .row {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  gap: 1.5rem;
+  margin-top: 4rem;
 }
 
+.products .product-card {
+  text-align: center;
+  border: 1px solid #666;
+  padding: 2rem;
+}
+
+.products .product-icons {
+  display: flex;
+  justify-content: center;
+  gap: 0.5rem;
+}
+
+.products .product-icons a {
+  width: 4rem;
+  height: 4rem;
+  color: #fff;
+  margin: 0.3rem;
+  border: 1px solid #666;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.products .product-icons a:hover {
+  background-color: var(--primary);
+  border: 1px solid var(--primary);
+}
+
+.products .product-image {
+  padding: 1rem 0;
+}
+
+.products .product-image img {
+  height: 25rem;
+}
+
+.products .product-content h3 {
+  font-size: 2rem;
+}
+
+.products .product-stars {
+  font-size: 1.7rem;
+  padding: 0.8rem;
+  color: var(--primary);
+}
+
+.products .product-stars .star-full {
+  fill: var(--primary);
+}
+
+.products .product-price {
+  font-size: 1.3rem;
+  font-weight: bold;
+}
+
+.products .product-price span {
+  text-decoration: line-through;
+  font-weight: lighter;
+  font-size: 1rem;
+}
 
 /* Contact Section */
 
 .contact .row {
-    display: flex;
-    margin-top: 2rem;
-    background-color: #222;
+  display: flex;
+  margin-top: 2rem;
+  background-color: #222;
 }
 
 .contact .row .map {
-    flex: 1 1 45rem;
-    width: 100%;
-    object-fit: cover;
+  flex: 1 1 45rem;
+  width: 100%;
+  object-fit: cover;
 }
 
 .contact .row form {
-    flex: 1 1 45rem;
-    padding: 5rem 2rem;
-    text-align: center;
+  flex: 1 1 45rem;
+  padding: 5rem 2rem;
+  text-align: center;
 }
 
 .contact .row form .input-group {
-    display: flex;
-    align-items: center;
-    margin-top: 2rem;
-    background-color: var(--bg);
-    border: 1px solid #eee;
-    padding-left: 2rem;
+  display: flex;
+  align-items: center;
+  margin-top: 2rem;
+  background-color: var(--bg);
+  border: 1px solid #eee;
+  padding-left: 2rem;
 }
 
 .contact .row form .input-group input {
-    width: 100%;
-    padding: 2rem;
-    font-size: 1.7rem;
-    background: none;
-    color: #fff;
+  width: 100%;
+  padding: 2rem;
+  font-size: 1.7rem;
+  background: none;
+  color: #fff;
 }
 
 .contact .row form .btn {
-    margin-top: 3rem;
-    display: inline-block;
-    padding: 1rem 3rem;
-    font-size: 1.7rem;
-    color: #fff;
-    background-color: var(--primary);
-    cursor: pointer;
+  margin-top: 3rem;
+  display: inline-block;
+  padding: 1rem 3rem;
+  font-size: 1.7rem;
+  color: #fff;
+  background-color: var(--primary);
+  cursor: pointer;
 }
-
 
 /* Footer */
 
 footer {
-    background-color: var(--primary);
-    text-align: center;
-    padding: 1rem 0 3rem;
-    margin-top: 3rem;
+  background-color: var(--primary);
+  text-align: center;
+  padding: 1rem 0 3rem;
+  margin-top: 3rem;
 }
 
 footer .socials {
-    padding: 1rem 0;
+  padding: 1rem 0;
 }
 
 footer .socials a {
-    color: #fff;
-    margin: 1rem;
+  color: #fff;
+  margin: 1rem;
 }
 
 footer .socials a:hover,
 footer .links a:hover {
-    color: var(--bg);
+  color: var(--bg);
 }
 
 footer .links {
-    margin-bottom: 1.4rem;
+  margin-bottom: 1.4rem;
 }
 
 footer .links a {
-    color: #fff;
-    padding: 0.7rem 1rem;
+  color: #fff;
+  padding: 0.7rem 1rem;
 }
 
 footer .credit {
-    font-size: 0.8rem;
+  font-size: 0.8rem;
 }
 
 footer .credit a {
-    color: var(--bg);
-    font-weight: 700;
+  color: var(--bg);
+  font-weight: 700;
 }
 
-
 /* Modal Box */
-
 
 /* Item Detail */
 
 .modal {
-    display: none;
-    position: fixed;
-    z-index: 9999;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0, 0, 0, 0.7);
+  display: none;
+  position: fixed;
+  z-index: 9999;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 .modal-container {
-    position: relative;
-    background-color: #fefefe;
-    color: var(--bg);
-    margin: 15% auto;
-    padding: 1.2rem;
-    border: 1px solid #666;
-    width: 80%;
-    height: 45%;
-    animation: animateModal 0.5s;
+  position: relative;
+  background-color: #fefefe;
+  color: var(--bg);
+  margin: 15% auto;
+  padding: 1.2rem;
+  border: 1px solid #666;
+  width: 80%;
+  height: 45%;
+  animation: animateModal 0.5s;
 }
-
 
 /* Modal Animation */
 
 @keyframes animateModal {
-    from {
-        top: -300px;
-        opacity: 0;
-    }
-    to {
-        top: 0;
-        opacity: 1;
-    }
+  from {
+    top: -300px;
+    opacity: 0;
+  }
+  to {
+    top: 0;
+    opacity: 1;
+  }
 }
 
 .modal-container .close-icon {
-    position: absolute;
-    right: 1rem;
+  position: absolute;
+  right: 1rem;
 }
 
 .modal-content {
-    display: flex;
-    flex-wrap: nowrap;
+  display: flex;
+  flex-wrap: nowrap;
 }
 
 .modal-content img {
-    height: 20rem;
-    margin-right: 2rem;
-    margin-bottom: 2rem;
+  height: 20rem;
+  margin-right: 2rem;
+  margin-bottom: 2rem;
 }
 
 .modal-content p {
-    font-size: 1.2rem;
-    line-height: 1.8rem;
-    margin-top: 1.2rem;
+  font-size: 1.2rem;
+  line-height: 1.8rem;
+  margin-top: 1.2rem;
 }
 
 .modal-content a {
-    display: flex;
-    gap: 1rem;
-    width: 14rem;
-    border-radius: 10px;
-    background-color: var(--primary);
-    color: #fff;
-    margin-top: 1rem;
-    padding: 1rem 1.9rem;
+  display: flex;
+  gap: 1rem;
+  width: 14rem;
+  border-radius: 10px;
+  background-color: var(--primary);
+  color: #fff;
+  margin-top: 1rem;
+  padding: 1rem 1.9rem;
 }
 
-
 /* Media Queries */
-
 
 /* Laptop */
 
 @media (max-width: 1366px) {
-    html {
-        font-size: 75%;
-    }
+  html {
+    font-size: 75%;
+  }
 }
-
 
 /* Tablet */
 
 @media (max-width: 758px) {
-    html {
-        font-size: 62.5%;
-    }
-    #hamburger-menu {
-        display: inline-block;
-    }
-    .navbar .navbar-nav {
-        position: absolute;
-        top: 100%;
-        right: -100%;
-        background-color: #fff;
-        width: 30rem;
-        height: 100vh;
-        transition: 0.3s;
-    }
-    .navbar .navbar-nav.active {
-        right: 0;
-    }
-    .navbar .navbar-nav a {
-        color: var(--bg);
-        display: block;
-        margin: 1.5rem;
-        padding: 0.5rem;
-        font-size: 2rem;
-    }
-    .navbar .navbar-nav a::after {
-        transform-origin: 0 0;
-    }
-    .navbar .navbar-nav a:hover::after {
-        transform: scaleX(0.2);
-    }
-    .navbar .search-form {
-        width: 90%;
-        right: 2rem;
-    }
-    .about .row {
-        flex-wrap: wrap;
-    }
-    .about .row .about-img img {
-        height: 24rem;
-        object-fit: cover;
-        object-position: center;
-    }
-    .about .row .content {
-        padding: 0;
-    }
-    .about .row .content h3 {
-        margin-top: 1rem;
-        font-size: 2rem;
-    }
-    .about .row .content p {
-        font-size: 1.6rem;
-    }
-    .skills .row {
-        flex-wrap: wrap;
-    }
-    .education p {
-        font-size: 1.2rem;
-    }
-    .contact .row {
-        flex-wrap: wrap;
-    }
-    .contact .row .map {
-        height: 30rem;
-    }
-    .contact .row form {
-        padding-top: 0;
-    }
-    .modal-content {
-        flex-wrap: wrap;
-    }
+  html {
+    font-size: 62.5%;
+  }
+  #hamburger-menu {
+    display: inline-block;
+  }
+  .navbar .navbar-nav {
+    position: absolute;
+    top: 100%;
+    right: -100%;
+    background-color: #fff;
+    width: 30rem;
+    height: 100vh;
+    transition: 0.3s;
+  }
+  .navbar .navbar-nav.active {
+    right: 0;
+  }
+  .navbar .navbar-nav a {
+    color: var(--bg);
+    display: block;
+    margin: 1.5rem;
+    padding: 0.5rem;
+    font-size: 2rem;
+  }
+  .navbar .navbar-nav a::after {
+    transform-origin: 0 0;
+  }
+  .navbar .navbar-nav a:hover::after {
+    transform: scaleX(0.2);
+  }
+  .navbar .search-form {
+    width: 90%;
+    right: 2rem;
+  }
+  .about .row {
+    flex-wrap: wrap;
+  }
+  .about .row .about-img img {
+    height: 24rem;
+    object-fit: cover;
+    object-position: center;
+  }
+  .about .row .content {
+    padding: 0;
+  }
+  .about .row .content h3 {
+    margin-top: 1rem;
+    font-size: 2rem;
+  }
+  .about .row .content p {
+    font-size: 1.6rem;
+  }
+  .skills .row {
+    flex-wrap: wrap;
+  }
+  .education p {
+    font-size: 1.2rem;
+  }
+  .contact .row {
+    flex-wrap: wrap;
+  }
+  .contact .row .map {
+    height: 30rem;
+  }
+  .contact .row form {
+    padding-top: 0;
+  }
+  .modal-content {
+    flex-wrap: wrap;
+  }
 }
-
 
 /* Mobile Phone */
 
 @media (max-width: 450px) {
-    html {
-        font-size: 55%;
-    }
+  html {
+    font-size: 55%;
+  }
 }
